# Performance_tweaker

./: README.md  build_appimage.sh  install.sh  install_full.sh  pyproject.toml  rebuild.sh  run.py
Perf_tweak/: pyproject.toml
Perf_tweak/perf_tweaker/: main.py
Perf_tweak/perf_tweaker/backend/: install_backends.sh
Perf_tweak/perf_tweaker/backend/vendors/: set_gpu_switch.sh
Performance_tweaker/: pyproject.toml
Performance_tweaker/scripts/: detect_cpu.sh
Performance_tweaker/src/perf_tweaker/: __init__.py  main.py
backend/detect/: all.sh  cpu.sh  gpu.sh  system.sh
backend/vendors/: amd.sh  intel.sh  nvidia.sh  set_brightness.sh  set_cpu_power.sh  set_fan.sh  set_refresh_rate.sh
core/: load_backend.sh
perf_tweaker/: main.py
perf_tweaker/backend/detect/: cpu.sh  gpu.sh
perf_tweaker/backend/vendors/: set_backlight.sh  set_brightness.sh  set_charge_limit.sh  set_cpu_power.sh  set_fan.sh  set_gpu_power.sh  set_gpu_switch.sh  set_power_mode.sh  set_refresh_rate.sh
src/perf_tweaker/: main.py
src/perf_tweaker/backend/detect/: cpu.sh  gpu.sh
src/perf_tweaker/backend/vendors/: set_charge_limit.sh  set_power_mode.sh  set_refresh_rate.sh
src/performance_tweaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ui/: main.py
