[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-tweaker"
version = "0.1.0"
description = "Linux Performance Tweaker"
readme = ""
requires-python = ">=3.8"
authors = [{name = "you"}]
dependencies = ["PyQt5", "psutil"]

[project.scripts]
performance-tweaker = "perf_tweaker.main:run"
