[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-tweaker"
version = "0.1"
authors = [{ name = "You" }]
description = "Linux performance tuning GUI"
readme = ""
requires-python = ">=3.8"

[project.scripts]
performance-tweaker = "perf_tweaker.main:main"
